--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,8 +5,6 @@
     
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <link href='http://fonts.googleapis.com/css?family=Kalam:400,700,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     
     <title>Josh Cornelius</title>
     
@@ -15,12 +13,9 @@
   </head>
   
   <body>
-    <div class='name'>
-      <p>Josh Cornelius</p>
-    </div>
-    <div class='underline'>
-      <canvas id='line1' width='1000' height='300'></canvas>
-      <canvas id='line2' width='1000' height='300'></canvas>
+    <div class='main-info'>
+      <h1 class='name'>Josh Cornelius</h1>
+      <p class='short-blurb'>Mechanical Engineer turned Web Developer</p>
     </div>
     <%= yield %>
   </body>
