--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,97 +1,99 @@
 @charset "utf-8";
+@import url(http://fonts.googleapis.com/css?family=Lora:400,700);
+
 
 body {
-  background: black;
-  font-family: 'Open Sans', sans-serif; }
+  background: url('/images/surfing.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: rgba(0,0,0,0.7);
+  background-blend-mode: multiple;
+  font-family: 'Lora', sans-serif; }
 
-.nav li {
-  font-family: 'Kalam', cursive;
-  font-size: 1.5rem;
-  list-style: none;
-  display: inline;
-  padding: 5px;
-
-  a {
-    text-decoration: none;
-    color: white;
-
-    &:visited {
-      color: white;
-    }
-
-    &:hover {
-      color: #e74c3c;
-    }
-  }
-}
 
 .content {
   position: relative;
+  top: 300px;
   text-align: center;
   background-color: rgba(255,255,255,0.8);
-  margin-top: 200px;
   margin-left: auto;
   margin-right: auto;
-  width: 700px;
+  width: 50%;
   padding: 10px;
   border-radius: 5px;
   border: 2px solid #2ecc71;
 }
 
-.content:before {
-  content: ' ';
-  position: absolute;
-  z-index: -1;
-  top: 2px;
-  left: 2px;
-  right: 2px;
-  bottom: 2px;
-  border: 2px solid #3498db;
-}
+.nav-link { 
+  color:white;
+  text-decoration: none;
+  font-size: 1.5rem;
 
-.name {
-  position: fixed;
-  left: 0;
-  margin-top: 50px;
-  margin-left: 30px;
-  transform: rotate(-20deg);
-  -ms-transform: rotate(-20deg);
-  -webkit-transform: rotate(-20deg);
+  &:visited {
+    color:white
+  }
 
-  p {
-    display:inline;
-    left: 0;
-    font-size: 4rem;
-    color: white;
-    font-family: 'Kalam', cursive;
+  &:hover {
+    color: #2ecc71;
   }
 }
 
-.underline {
-    transform: rotate(-20deg);
-    -ms-transform: rotate(-20deg);
-    -webkit-transform: rotate(-20deg);
-    position: fixed;
-    margin-top: 40px;
-    margin-left: -40px;
+.about-link {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  color: white;
+  font-size: 1.5rem;
 }
 
-#line2 {
-  position: fixed;
+.up-arrow {
+  margin: 0;
 }
 
-#line1 {
-  position: fixed;
+.down-arrow {
+  transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  color:white;
+  font-size: 1.5rem;
+  margin: 0;
 }
 
-.nav-container {
-  position: fixed;
-  transform: rotate(-20deg);
-  -ms-transform: rotate(-20deg);
-  -webkit-transform: rotate(-20deg);
-  margin-top: 200px;
+#projects {
+  position: absolute;
+  right: 0;
+  top: 50%;
+}
+
+#blog {
+  position: absolute;
   left: 0;
+  top: 50%;
 }
+
+.contact-link {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  text-align: center;
+}
+
+.main-info {
+  position: absolute;
+  left: 43%;
+  bottom: 50%;
+  text-align: center;
+  color:white
+}
+
+.name {
+  font-size: 3rem;
+  margin-bottom: 5px;
+}
+
 
 .project-image-container {
   position: relative;
