--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,13 +11,17 @@
 	<p class='down-arrow'>^</p>
 </div>
 
+<div class='main-info'>
+  <h1 class='name'>Josh Cornelius</h1>
+  <p class='short-blurb'>Mechanical Engineer turned Web Developer</p>
+</div>
 
 <div class='hidden about content'>
 	<h2>About</h2>
 	<p>I am a recent mechanical engineering graduate from McMaster University. I am currently at Bitmaker Labs learning the ins and outs of web development with the goal of entering the world of startups.
 	</p>
 </div>
-<div class='hidden projects'>
+<div class='hidden projects content'>
 	<h2>Current Project</h2>
 	<div class='project-image-container'>
 		<%= image_tag 'brewgarden.png', class: 'project-image' %>
@@ -32,12 +36,12 @@
 		</a>
 	</div>
 </div>
-<div class='hidden blog'>
+<div class='hidden blog content'>
 	<h2>Blog</h2>
 	<p>I write a blog mostly out of self interest as way to organize my thoughts, but who knows, maybe you'll find it interesting.</p>
 	<%= link_to 'Check it out!', 'http://littlebitofeverything.svbtle.com/', class: 'blog-link' %>
 </div>
-<div class='hidden contact'>
+<div class='hidden contact content'>
 	<h2>Contact Info</h2>
 	<p>joshcornelius9@gmail.com</p>
 	<a href="https://twitter.com/corneljr">
