--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -12,18 +12,16 @@ body {
   background-blend-mode: multiple;
   font-family: 'Lora', sans-serif; }
 
-
 .content {
-  position: relative;
-  top: 300px;
   text-align: center;
-  background-color: rgba(255,255,255,0.8);
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  top:25%;
+  left: 25%;
+  color: white;
   width: 50%;
-  padding: 10px;
+  background-color: rgba(0,0,0,0.7);
+  border: 1px solid black;
   border-radius: 5px;
-  border: 2px solid #2ecc71;
 }
 
 .nav-link { 
