pushing to heroku

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -45,9 +45,9 @@
 	<h2>Contact Info</h2>
 	<p>joshcornelius9@gmail.com</p>
 	<a href="https://twitter.com/corneljr">
-		<%= image_tag 'twitter.gif', class: 'social-icon' %>
+		<%= image_tag 'twitter.png', class: 'social-icon-twitter' %>
 	</a>
 	<a href="http://ca.linkedin.com/in/joshcornelius1">
-		<%= image_tag 'linkedin.png', class: 'social-icon' %>
+		<%= image_tag 'linkedin.png', class: 'social-icon-linkedin' %>
 	</a>
 </div>
