--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,6 +1,5 @@
 @charset "utf-8";
-@import url(http://fonts.googleapis.com/css?family=Lora:400,700);
-
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700);
 
 body {
   background: url('/images/surfing.jpg') no-repeat center center fixed;
@@ -10,13 +9,17 @@ body {
   background-size: cover;
   background-color: rgba(0,0,0,0.7);
   background-blend-mode: multiple;
-  font-family: 'Lora', sans-serif; }
+  font-family: 'Lato', sans-serif; }
+
+p {
+
+}
 
 .content {
   text-align: center;
   position: absolute;
-  top:25%;
-  left: 25%;
+  top:30%;
+  left: 26%;
   color: white;
   width: 50%;
   background-color: rgba(0,0,0,0.7);
@@ -103,6 +106,7 @@ body {
 .project-image {
   display: block;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .image-info {
@@ -131,6 +135,7 @@ body {
   width: 100px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
   display: block;
   background-color: #e74c3c;
   border-radius: 5px;
@@ -151,6 +156,11 @@ body {
   display: none;
 }
 
-.social-icon {
+.social-icon-twitter {
+  height: 30px;
+  padding-bottom: 5px;
+}
+
+.social-icon-linkedin {
   height: 50px;
 }
