--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700);
+@import url(http://fonts.googleapis.com/css?family=Dosis:400,700);
 
 body {
   background: url('/images/surfing.jpg') no-repeat center center fixed;
@@ -9,27 +9,49 @@ body {
   background-size: cover;
   background-color: rgba(0,0,0,0.7);
   background-blend-mode: multiple;
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Dosis', sans-serif; }
 
-p {
+a {
+  text-decoration: none;
+  color: white;
+}
 
+.top-name {
+  text-align: center;
+  color: white;
+  font-size: 3rem;
+}
+
+.content-container {
+  position:absolute;
+  top: 30%;
+  width: 100%;
 }
 
 .content {
   text-align: center;
-  position: absolute;
-  top:30%;
-  left: 26%;
   color: white;
   width: 50%;
-  background-color: rgba(0,0,0,0.7);
-  border: 1px solid black;
+  margin-left: auto;
+  margin-right:auto;
+  background-color: rgba(0,0,0,0.5);
+  border: 1px solid white;
   border-radius: 5px;
+  padding: 10px;
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  p {
+    font-size: 1.25rem;
+  }
 }
 
 .nav-link { 
   color:white;
   text-decoration: none;
+  font-weight: bold;
   font-size: 1.5rem;
 
   &:visited {
@@ -41,57 +63,27 @@ p {
   }
 }
 
-.about-link {
+.nav-links {
+  padding: 0;
   text-align: center;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  color: white;
-  font-size: 1.5rem;
+  list-style: none;
+
+  li {
+    display: inline;
+    padding: 10px;
+  }
 }
 
-.up-arrow {
-  margin: 0;
-}
-
-.down-arrow {
-  transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
-  color:white;
-  font-size: 1.5rem;
-  margin: 0;
-}
-
-#projects {
-  position: absolute;
-  right: 0;
-  top: 50%;
-}
-
-#blog {
-  position: absolute;
-  left: 0;
-  top: 50%;
-}
-
-.contact-link {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  text-align: center;
-}
 
 .main-info {
   position: absolute;
-  left: 43%;
   bottom: 50%;
-  text-align: center;
+  left: 37%;
   color:white
 }
 
 .name {
-  font-size: 3rem;
+  font-size: 4rem;
   margin-bottom: 5px;
 }
 
@@ -163,4 +155,8 @@ p {
 
 .social-icon-linkedin {
   height: 50px;
+}
+
+.short-blurb {
+  font-size: 1.5rem;
 }
