--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,7 +15,7 @@
 <div class='content-container'>
 	<div class='hidden about content'>
 		<h2>About</h2>
-		<p>I am a recent mechanical engineering graduate from McMaster University. I am currently at Bitmaker Labs learning the ins and outs of web development with the goal of entering the world of startups.
+		<p>I am a mechanical engineering graduate from McMaster University and just finished Bitmaker Labs' 9 week immersive web development program. This program has sparked a passion in me and has solidified my desire to be a developer. I'm currently looking for opportunities that allow me to continue to learn and grow as a developer while working on cool and meaningful projects.
 		</p>
 	</div>
 	<div class='hidden projects content'>
